Fix page content not visible

--- a/resources/sass/components/content/_posts-and-pages.scss
+++ b/resources/sass/components/content/_posts-and-pages.scss
@@ -6,7 +6,7 @@
 .post,
 .page {
   margin: 0 0 1.5em;
-  overflow: hidden
+  overflow: auto;
 }
 
 .post {
